# ai-assistant-cli

./: .gitignore  README.md  install.sh  pyproject.toml
.github/workflows/: pr.yml
ais/: api_key_providers.py  auth_app.py  main.py  utils.py
tests/: noop_test.py
