[tool.poetry]
name = "ais"
version = "0.1.0"
description = ""
authors = ["Trung Nguyen <nguyenviettrung1995@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
ais = "ais.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = { extras = ["all"], version = "^0.9.0" }
openai = "^1.3.5"
keyring = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
